test_regress/t/t_net_delay.out
%Warning-ASSIGNDLY: t/t_net_delay.v:13:15: Ignoring timing control on this assignment/primitive due to --no-timing
                                         : ... In instance t
   13 |    wire[3:0] #4 val1 = cyc;
      |               ^
                    ... For warning description see https://verilator.org/warn/ASSIGNDLY?v=latest
                    ... Use "/* verilator lint_off ASSIGNDLY */" and lint_on around source to disable this message.
%Warning-ASSIGNDLY: t/t_net_delay.v:17:12: Ignoring timing control on this assignment/primitive due to --no-timing
                                         : ... In instance t
   17 |    assign #4 val2 = cyc;
      |            ^
%Error: Exiting due to
